--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,4 +11,15 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '11'
+	  - uses: actions/cache@v2
+        with:
+          path: |
+        	~/.gradle/caches
+			~/.gradle/wrapper
+      	  key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+      	  restore-keys: |
+        	${{ runner.os }}-gradle-
       - run: ./gradlew build
+	  - run: |
+	      rm -f ~/.gradle/caches/modules-2/modules-2.lock
+	      rm -f ~/.gradle/caches/modules-2/gc.properties
