--- a/build.gradle
+++ b/build.gradle
@@ -230,7 +230,7 @@ publishing {
     publications {
         maven(MavenPublication) {
             artifact omlZip
-			pom.withXml {
+            pom.withXml {
                 def dependencies = asNode().appendNode('dependencies')
                 configurations.oml.allDependencies.stream().each {
                     def dependency = dependencies.appendNode('dependency')
@@ -238,6 +238,16 @@ publishing {
                     dependency.appendNode('artifactId', it.name)
                     dependency.appendNode('version', it.version)
                 }
+            }
+        }
+    }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/melaasar/oml-test"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
             }
         }
     }
