--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,16 +2,16 @@ name: OML CD
 
 on:
   release:
-    types: [created]
+    types: [published]
 
 jobs:
-  publish:
+  publish-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
-          java-version: '11'
+          java-version: 11
       - run: gradle publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
